<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/error_layout_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_zero"
        android:contentDescription="@string/error_layout_image_content_description"
        android:scaleType="centerInside"
        android:src="@drawable/error_image"
        app:layout_constraintBottom_toTopOf="@id/error_layout_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/error_layout_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error_layout_message_text"
        android:textAlignment="center"
        android:textSize="@dimen/error_layout_message_text_size"
        app:layout_constraintBottom_toTopOf="@+id/error_layout_button_back"
        app:layout_constraintTop_toBottomOf="@id/error_layout_image" />

    <Button
        android:id="@+id/error_layout_button_back"
        style="@style/SearchInputButtonSearchStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/error_layout_button_back_margin_bottom"
        android:text="@string/error_layout_button_back_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_layout_message" />

</androidx.constraintlayout.widget.ConstraintLayout>
