<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_yellow_primary"
    tools:context=".ui.fragment.SplashFragment">

    <TextView
        android:id="@+id/splash_tv_welcome"
        style="@style/GeneralTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_welcome_text"
        android:textSize="@dimen/splash_tv_welcome_text_size"
        app:layout_constraintBottom_toTopOf="@id/splash_tv_product_searcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/splash_tv_product_searcher"
        style="@style/GeneralTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/splash_product_searcher_text"
        android:textSize="@dimen/splash_tv_product_searcher_text_size"
        app:layout_constraintBottom_toTopOf="@id/splash_iv_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_tv_welcome" />

    <ImageView
        android:id="@+id/splash_iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/splash_logo_content_description"
        android:src="@drawable/product_searcher_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_tv_welcome" />

</androidx.constraintlayout.widget.ConstraintLayout>
